[package]
name = "transcriber"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.15.3"
crossterm = "0.28.1"
hound = "3.5.1"
k_board = "1.3.1"
ratatui = "0.29.0"
blake3 = "1.5.0"
dirs = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.37", features = ["derive"] }
